Mute a warning when typing Alt+ArrowKey. Code cleanup. b=460680 r+sr=bzbarsky